# web-server

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
resources/: bad_request.txt  get.txt  post.txt
sources/: CMakeLists.txt  main.cpp
sources/anton/: CMakeLists.txt  http_connection.cpp  http_connection.hpp  http_connection_manager.cpp  http_connection_manager.hpp  http_errors.cpp  http_errors.hpp  http_header.hpp  http_headers.cpp  http_headers.hpp  http_middleware.cpp  http_middleware.hpp  http_request.hpp  http_request_handler.cpp  http_request_handler.hpp  http_request_parser.cpp  http_request_parser.hpp  http_response.hpp  http_server.cpp  http_server.hpp  http_version.hpp  main.cpp
sources/nr/: CMakeLists.txt  main.cpp
sources/nr/http/: connection.cpp  connection.hpp  error.cpp  error.hpp  request.hpp  server.cpp  server.hpp  socket-buffered-reader.cpp  socket-buffered-reader.hpp
sources/nr/tests/: HTTP_TEST.txt
